<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Circulo">

    <TextView
        android:id="@+id/lblTituloCirculo"
        android:layout_width="124dp"
        android:layout_height="36dp"
        android:layout_marginTop="28dp"
        android:text="@string/circulo"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblRadio"
        android:layout_width="74dp"
        android:layout_height="28dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="68dp"
        android:text="@string/radio"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTituloCirculo" />

    <EditText
        android:id="@+id/txtRadio"
        android:layout_width="162dp"
        android:layout_height="47dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/cero"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.251"
        app:layout_constraintStart_toEndOf="@+id/lblRadio"
        app:layout_constraintTop_toBottomOf="@+id/lblTituloCirculo" />

    <Button
        android:id="@+id/btnCalcularC"
        android:layout_width="118dp"
        android:layout_height="56dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="100dp"
        android:onClick="Calcular"
        android:text="@string/btn_calcular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRadio" />

    <Button
        android:id="@+id/BtnLimpiarC"
        android:layout_width="131dp"
        android:layout_height="58dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="52dp"
        android:onClick="limpiar"
        android:text="@string/btn_limpiar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.818"
        app:layout_constraintStart_toEndOf="@+id/btnCalcularC"
        app:layout_constraintTop_toBottomOf="@+id/txtRadio" />
</androidx.constraintlayout.widget.ConstraintLayout>