<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cubo">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="146dp"
        android:layout_height="37dp"
        android:layout_marginTop="28dp"
        android:text="@string/cuadrado"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="76dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="72dp"
        android:text="@string/lbl_arista"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/txtArista"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/txtArista"
        android:layout_width="143dp"
        android:layout_height="45dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:hint="@string/cero"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/button"
        android:layout_width="119dp"
        android:layout_height="50dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="72dp"
        android:onClick="Calcular"
        android:text="@string/btn_calcular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtArista" />

    <Button
        android:id="@+id/button2"
        android:layout_width="126dp"
        android:layout_height="51dp"
        android:layout_marginTop="72dp"
        android:onClick="limpiar"
        android:text="@string/btn_limpiar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/txtArista" />

</androidx.constraintlayout.widget.ConstraintLayout>