<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cuadrado">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="152dp"
        android:layout_height="33dp"
        android:layout_marginTop="28dp"
        android:text="@string/cuadrado"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblLadosCuadrado"
        android:layout_width="141dp"
        android:layout_height="29dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="80dp"
        android:text="@string/lbl_lados_cadrado"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/txtLadosCuadrado"
        android:layout_width="124dp"
        android:layout_height="43dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:hint="@string/cero"
        android:inputType="numberDecimal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/lblLadosCuadrado"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/btnCalcularCuad"
        android:layout_width="126dp"
        android:layout_height="51dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="52dp"
        android:onClick="Calcular"
        android:text="@string/btn_calcular"
        app:layout_constraintEnd_toStartOf="@+id/btnLimpiarCuad"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblLadosCuadrado" />

    <Button
        android:id="@+id/btnLimpiarCuad"
        android:layout_width="119dp"
        android:layout_height="54dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="60dp"
        android:onClick="limpiar"
        android:text="@string/btn_limpiar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLadosCuadrado" />
</androidx.constraintlayout.widget.ConstraintLayout>