<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cilindro">

    <TextView
        android:id="@+id/lblTituloEsfera"
        android:layout_width="124dp"
        android:layout_height="36dp"
        android:layout_marginTop="28dp"
        android:text="@string/cilindro"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblRadioC"
        android:layout_width="66dp"
        android:layout_height="30dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="144dp"
        android:text="@string/radio"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/txtRadioCi"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblAlturaC"
        android:layout_width="66dp"
        android:layout_height="32dp"
        android:layout_marginTop="56dp"
        android:text="@string/lbl_altura"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/txtAlturaCi"
        app:layout_constraintHorizontal_bias="0.63"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblRadioC" />

    <EditText
        android:id="@+id/txtRadioCi"
        android:layout_width="150dp"
        android:layout_height="44dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="120dp"
        android:ems="10"
        android:hint="@string/cero"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTituloEsfera" />

    <EditText
        android:id="@+id/txtAlturaCi"
        android:layout_width="152dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="120dp"
        android:ems="10"
        android:hint="@string/cero"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRadioCi" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="80dp"
        android:onClick="Calcular"
        android:text="@string/btn_calcular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAlturaCi" />

    <Button
        android:id="@+id/btnLimpiar"
        android:layout_width="126dp"
        android:layout_height="48dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="68dp"
        android:onClick="limpiar"
        android:text="@string/btn_limpiar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAlturaCi" />

</androidx.constraintlayout.widget.ConstraintLayout>